# websec

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
docs/: CLI_USAGE.md
src/cli/: banner.py
src/lambda/: entrypoint.py  lib.py
test/: __init__.py
test/unit/: __init__.py  test_ping.py
